--- a/src/components/Note/index.css
+++ b/src/components/Note/index.css
@@ -25,7 +25,7 @@ div.note > textarea.note-contents {
   margin: 0;
   padding: 0;
   width: 100%;
-  height: 100%;
+  height: calc(100% - 60px);
   outline: none;
   resize: none;
 }
